--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-
-    
+    <!-- CANVAS BACKGROUND -->
+    <canvas id="bg"></canvas>
 
     <script type="module" src="/main.js"></script>
   </body>
