--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </section>
 
       <blockquote>
-        <p>Thanks for watching!</p>
+        <p class="last">Thanks for watching!</p>
       </blockquote>
     </main>
 
