add contact me linkedin link

--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
       </section>
 
       <blockquote>
-        <p class="last">Contact Me</p>
+        <a
+          class="last"
+          target="_blank"
+          href="https://www.linkedin.com/in/emanuele-favero"
+          >Contact Me</a
+        >
       </blockquote>
     </main>
 
